# goit-pythonweb-hw-10

./: alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_main.http
alembic/: env.py
alembic/versions/: b327ed1c2ba7_migration_message.py  b70685c3be06_initial_migration.py  ba835ab70b68_initial_migration.py
